--- a/.github/workflows/adonisjs.yml
+++ b/.github/workflows/adonisjs.yml
@@ -15,14 +15,17 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
-
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-
-      - name: Install dependencies
-        run: npm ci
-
+      - name: Install Adonis dependencies
+        run: npm install
+      - name: Install Vue dependencies
+        run: cd ui && npm install --legacy-peer-deps
+      - name: Install legacy peer dependencies
+        run: npm install --legacy-peer-deps
+      - name: Update version
+        run: echo VERSION=$(node -p "require('./package.json').version") >> build.env
       - name: Build
         run: npm run build
