feat(Action): add test job

--- a/.github/workflows/adonisjs.yml
+++ b/.github/workflows/adonisjs.yml
@@ -7,6 +7,24 @@ on:
     branches: [ master ]
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [16.x]
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: Install Adonis dependencies
+        run: npm install
+      - name: Install Vue dependencies
+        run: cd ui && npm install --legacy-peer-deps
+      - name: Run tests
+        run: node -r @adonisjs/assembler/build/register japaFile.ts -ci
   build:
     runs-on: ubuntu-latest
     strategy:
