--- a/.github/workflows/adonisjs.yml
+++ b/.github/workflows/adonisjs.yml
@@ -49,3 +49,24 @@ jobs:
         run: echo VERSION=$(node -p "require('./package.json').version") >> build.env
       - name: Build
         run: npm run build
+  push-image:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: maximemrf
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./dockerfile-hd
+          push: true
+          tags: ghcr.io/${{ github.repository_owner }}/hexa-data:latest
