--- a/.github/workflows/adonisjs.yml
+++ b/.github/workflows/adonisjs.yml
@@ -69,4 +69,4 @@ jobs:
           context: .
           file: ./dockerfile-hd
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/hexa-data:latest
+          tags: ghcr.io/maximemrf/hexa-data:latest
