--- a/.github/workflows/adonisjs.yml
+++ b/.github/workflows/adonisjs.yml
@@ -62,7 +62,7 @@ jobs:
         with:
           registry: ghcr.io
           username: maximemrf
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.TOKEN }}
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
