--- a/.github/workflows/adonisjs.yml
+++ b/.github/workflows/adonisjs.yml
@@ -7,26 +7,6 @@ on:
     branches: [ master ]
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [16.x]
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-      - name: Install Adonis dependencies
-        run: npm install
-      - name: Install Vue dependencies
-        run: cd ui && npm install --legacy-peer-deps
-      - name: Setup database
-        run: mkdir tmp && touch tmp/db.sqlite3
-      - name: Run tests
-        run: node -r @adonisjs/assembler/build/register japaFile.ts -ci
   build:
     runs-on: ubuntu-latest
     strategy:
@@ -49,8 +29,30 @@ jobs:
         run: echo VERSION=$(node -p "require('./package.json').version") >> build.env
       - name: Build
         run: npm run build
+  test:
+      runs-on: ubuntu-latest
+      needs: build
+      strategy:
+        matrix:
+          node-version: [16.x]
+      steps:
+        - name: Checkout Code
+          uses: actions/checkout@v3
+        - name: Use Node.js ${{ matrix.node-version }}
+          uses: actions/setup-node@v3
+          with:
+            node-version: ${{ matrix.node-version }}
+        - name: Install Adonis dependencies
+          run: npm install
+        - name: Install Vue dependencies
+          run: cd ui && npm install --legacy-peer-deps
+        - name: Setup database
+          run: mkdir tmp && touch tmp/db.sqlite3
+        - name: Run tests
+          run: node -r @adonisjs/assembler/build/register japaFile.ts -ci
   push-image:
     runs-on: ubuntu-latest
+    needs: [build, test]
     permissions:
       contents: read
       packages: write
