--- a/.github/workflows/adonisjs.yml
+++ b/.github/workflows/adonisjs.yml
@@ -7,11 +7,35 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         node-version: [16.x]
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: Install Adonis dependencies
+        run: npm install
+      - name: Install Vue dependencies
+        run: cd ui && npm install --legacy-peer-deps
+      - name: Setup database
+        run: mkdir tmp && touch tmp/db.sqlite3
+      - name: Run tests
+        run: node -r @adonisjs/assembler/build/register japaFile.ts -ci
+  build:
+    runs-on: ubuntu-latest
+    needs: test
+    strategy:
+      matrix:
+        node-version: [16.x]
+    permissions:
+      contents: read
+      packages: write
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
@@ -29,36 +53,14 @@ jobs:
         run: echo VERSION=$(node -p "require('./package.json').version") >> build.env
       - name: Build
         run: npm run build
-  test:
-      runs-on: ubuntu-latest
-      needs: build
-      strategy:
-        matrix:
-          node-version: [16.x]
-      steps:
-        - name: Checkout Code
-          uses: actions/checkout@v3
-        - name: Use Node.js ${{ matrix.node-version }}
-          uses: actions/setup-node@v3
-          with:
-            node-version: ${{ matrix.node-version }}
-        - name: Install Adonis dependencies
-          run: npm install
-        - name: Install Vue dependencies
-          run: cd ui && npm install --legacy-peer-deps
-        - name: Setup database
-          run: mkdir tmp && touch tmp/db.sqlite3
-        - name: Run tests
-          run: node -r @adonisjs/assembler/build/register japaFile.ts -ci
-  push-image:
-    runs-on: ubuntu-latest
-    needs: [build, test]
-    permissions:
-      contents: read
-      packages: write
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
+      - name: Change directory
+        run: cd build
+      - name: Create container
+        run: docker buildx create --name mybuilder --driver docker-container --bootstrap --use
+      - name: Build an push container
+        run: |
+          echo ${{ secrets.TOKEN }} | docker login ghcr.io -u maximemrf --password-stdin
+          docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v7 --push --file dockerfile-hd -t ghcr.io/maximemrf/hexa-data:$VERSION -t ghcr.io/maximemrf/hexa-data:latest .
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
