--- a/.github/workflows/adonisjs.yml
+++ b/.github/workflows/adonisjs.yml
@@ -73,16 +73,16 @@ jobs:
         run: |
           echo ${{ secrets.TOKEN }} | docker login ghcr.io -u maximemrf --password-stdin
           docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v7 --push --file dockerfile-hd -t ghcr.io/maximemrf/hexa-data:$VERSION -t ghcr.io/maximemrf/hexa-data:latest .
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: maximemrf
-          password: ${{ secrets.TOKEN }}
-      - name: Build and push
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./dockerfile-hd
-          push: true
-          tags: ghcr.io/maximemrf/hexa-data:latest
+      # - name: Login to GitHub Container Registry
+      #   uses: docker/login-action@v1
+      #   with:
+      #     registry: ghcr.io
+      #     username: maximemrf
+      #     password: ${{ secrets.TOKEN }}
+      # - name: Build and push
+      #   uses: docker/build-push-action@v2
+      #   with:
+      #     context: .
+      #     file: ./dockerfile-hd
+      #     push: true
+      #     tags: ghcr.io/maximemrf/hexa-data:latest
