fix(Action): display current version

--- a/.github/workflows/adonisjs.yml
+++ b/.github/workflows/adonisjs.yml
@@ -63,6 +63,8 @@ jobs:
       #   with:
       #     name: build-env
       #     path: .
+      - name: Display version
+        run: cat build.env
       - name: Set version
         run: export $(cat build.env | xargs)
       - name: Change directory
