--- a/.github/workflows/adonisjs.yml
+++ b/.github/workflows/adonisjs.yml
@@ -74,7 +74,7 @@ jobs:
       - name: Build an push container
         run: |
           echo ${{ secrets.TOKEN }} | docker login ghcr.io -u maximemrf --password-stdin
-          docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v7 --push --file dockerfile-hd -t ghcr.io/maximemrf/hexa-data:$VERSION -t ghcr.io/maximemrf/hexa-data:latest .
+          docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v7 --push --file dockerfile-hd -t ghcr.io/maximemrf/hexa-data:latest -t ghcr.io/maximemrf/hexa-data:latest .
       # - name: Login to GitHub Container Registry
       #   uses: docker/login-action@v1
       #   with:
