feat: rewrite the install script

--- a/.env.example
+++ b/.env.example
@@ -67,3 +67,9 @@ TRAEFIK_VERSION=latest
 OVH_APP_KEY=
 OVH_APP_SECRET=
 OVH_CONSUMER_KEY=
+
+EMAIL_FROM=
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USERNAME=
+SMTP_PASSWORD=
