--- a/.github/workflows/adonisjs.yml
+++ b/.github/workflows/adonisjs.yml
@@ -50,15 +50,11 @@ jobs:
       - name: Install legacy peer dependencies
         run: npm install --legacy-peer-deps
       - name: Update version
-        run: echo VERSION=$(node -p "require('./package.json').version") >> build.env
+        run: echo VERSION=$(node -p "require('./package.json').version") >> $GITHUB_ENV
       - name: Build
         run: npm run build
-      - name: Display version
-        run: cat build.env
-      - name: Set version
-        run: export $(cat build.env | xargs)
       - name: Display version name
-        run: echo $VERSION
+        run: echo {{ env.VERSION }}
       - name: Change directory
         run: cd build
       - name: Create container
@@ -66,7 +62,7 @@ jobs:
       - name: Build an push container
         run: |
           echo ${{ secrets.TOKEN }} | docker login ghcr.io -u maximemrf --password-stdin
-          docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v7 --push --file dockerfile-hd -t ghcr.io/maximemrf/hexa-data:${VERSION} -t ghcr.io/maximemrf/hexa-data:latest .
+          docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v7 --push --file dockerfile-hd -t ghcr.io/maximemrf/hexa-data:{{ env.VERSION }} -t ghcr.io/maximemrf/hexa-data:latest .
       # - name: Login to GitHub Container Registry
       #   uses: docker/login-action@v1
       #   with:
