--- a/.env.example
+++ b/.env.example
@@ -68,7 +68,7 @@ OVH_APP_KEY=
 OVH_APP_SECRET=
 OVH_CONSUMER_KEY=
 
-EMAIL_FROM=
+EMAIL_FROM=email@email.com
 SMTP_HOST=
 SMTP_PORT=
 SMTP_USERNAME=
