--- a/.env.dev
+++ b/.env.dev
@@ -51,8 +51,8 @@ NODE_RED_VERSION=2.2.2-12
 
 HD_SCRIPT_INTERVAL_FACTOR=100
 HD_VERSION=0.1.0
-HD_LICENSE_KEY=12345678
-HD_API_URL=http://hd-service:3333/api/v1
+
+HD_API_URL=http://localhost:3333/api/v1
 
 VITE_API_PREFIX=/api/v1
 VITE_WARP10_EXTERNAL_URL=data.hexa-data.fr
@@ -63,3 +63,13 @@ QUEUE_REDIS_PORT=6379
 QUEUE_REDIS_PASSWORD=12345678
 
 TRAEFIK_VERSION=latest
+
+OVH_APP_KEY=
+OVH_APP_SECRET=
+OVH_CONSUMER_KEY=
+
+EMAIL_FROM=email@email.com
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USERNAME=
+SMTP_PASSWORD=
