fix:conf nodered

--- a/.env.example
+++ b/.env.example
@@ -56,7 +56,7 @@ HD_API_URL=http://host.docker.internal:3333/api/v1
 
 VITE_API_PREFIX=/api/v1
 VITE_WARP10_EXTERNAL_URL=data.hexa-data.fr
-
+VITE_NR_ACTIVATED=false
 QUEUE_REDIS_VERSION=6.2-alpine
 QUEUE_REDIS_HOST=queue-redis-service
 QUEUE_REDIS_PORT=6379
