--- a/.env.dev
+++ b/.env.dev
@@ -56,7 +56,7 @@ HD_API_URL=http://localhost:3333/api/v1
 
 VITE_API_PREFIX=/api/v1
 VITE_WARP10_EXTERNAL_URL=data.hexa-data.fr
-
+VITE_NR_ACTIVATED=false
 QUEUE_REDIS_VERSION=6.2-alpine
 QUEUE_REDIS_HOST=localhost
 QUEUE_REDIS_PORT=6379
