--- a/ui/package.json
+++ b/ui/package.json
@@ -11,7 +11,7 @@
     "@heroicons/vue": "^1.0.6",
     "@hexa-ai/discovery-plugin-csv-export": "^1.0.2",
     "@hexa-ai/discovery-plugin-sensor-gauge": "^1.0.9",
-    "@senx/discovery-widgets": "^1.1.40",
+    "@senx/discovery-widgets": "1.1.40",
     "@senx/warpview-editor": "^2.3.44",
     "@tailwindcss/forms": "^0.5.3",
     "@vuepic/vue-datepicker": "^3.3.1",
