--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,7 +36,7 @@
       "@adonisjs/attachment-lite",
       "adonis5-scheduler",
       "@adonisjs/view",
-      "@setten/bull-queue",
+      "@rlanz/bull-queue",
       "@adonisjs/mail"
     ]
   }
