--- a/ui/package.json
+++ b/ui/package.json
@@ -7,6 +7,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@codemirror/autocomplete": "^6.8.1",
+    "@codemirror/lang-javascript": "github:codemirror/lang-javascript",
+    "@codemirror/theme-one-dark": "github:codemirror/theme-one-dark",
     "@headlessui/vue": "^1.6.7",
     "@heroicons/vue": "^1.0.6",
     "@hexa-ai/discovery-plugin-csv-export": "^1.0.2",
@@ -17,12 +20,16 @@
     "@vuepic/vue-datepicker": "^3.3.1",
     "axios": "^0.24.0",
     "caniuse-lite": "^1.0.30001367",
+    "codemirror": "^6.0.1",
     "gridstack": "^5.1.1",
     "leaflet": "^1.8.0",
     "material-file-icons": "^2.2.0",
+    "monaco-editor-vue3": "^0.1.6",
     "path": "^0.12.7",
+    "socket.io-client": "^4.7.1",
     "vite-plugin-plain-text": "^1.2.1",
     "vue": "^3.2.31",
+    "vue-codemirror": "^6.1.1",
     "vue-color-kit": "^1.0.5",
     "vue-i18n": "^9.1.10",
     "vue-router": "^4.0.13",
