--- a/package.json
+++ b/package.json
@@ -86,6 +86,6 @@
     "source-map-support": "^0.5.21",
     "sqlite3": "^5.0.9",
     "unzip-stream": "^0.3.1",
-    "vite-plugin-plain-text": "^1.2.1",
+    "vite-plugin-plain-text": "^1.2.1"
   }
 }
