feat:add javascript runtime macro

--- a/.env.testing
+++ b/.env.testing
@@ -58,3 +58,7 @@ OVH_APP_KEY=
 OVH_APP_SECRET=
 OVH_CONSUMER_KEY=
 EMAIL_FROM=contact@hexa-ai.fr
+REDIS_CONNECTION=local
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
+REDIS_PASSWORD=12345678
