--- a/.github/workflows/adonisjs.yml
+++ b/.github/workflows/adonisjs.yml
@@ -12,6 +12,12 @@ jobs:
     strategy:
       matrix:
         node-version: [16.x]
+        redis-version: [6]
+    services:
+      redis:
+        image: redis:6
+        ports:
+          - "6379:6379" # Map Redis container port to the host machine
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
@@ -27,6 +33,8 @@ jobs:
         run: mkdir tmp && touch tmp/db.sqlite3
       - name: Run tests
         run: node -r @adonisjs/assembler/build/register japaFile.ts -ci
+        env:
+          REDIS_HOST: redis
   build:
     runs-on: ubuntu-latest
     needs: test
