feat: add vite customisation examlpe

--- a/.env.example
+++ b/.env.example
@@ -54,6 +54,8 @@ HD_VERSION=0.1.0
 
 HD_API_URL=http://host.docker.internal:3333/api/v1
 
+VITE_HOST=localhost
+VITE_PORT=2000
 VITE_API_PREFIX=/api/v1
 VITE_WARP10_EXTERNAL_URL=data.hexa-data.fr
 VITE_NR_ACTIVATED=false
