--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -11,9 +11,7 @@
     "esModuleInterop": true,
     "noEmit": true,
     "lib": ["esnext", "dom"],
-    "typeRoots": [
-      "./src/global.d.ts"
-    ]
+    "typeRoots": ["./src/global.d.ts"]
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"]
 }
