feat: add grafana service and logic to project

--- a/.env.example
+++ b/.env.example
@@ -46,6 +46,12 @@ WARP10_MAXLOOP_HARD=1000000
 WARPFLEET_MACROS_TTL=180000
 WARPFLEET_SYNCHRONISER_URL_PREFIX=http://localhost:8082/api/sync
 
+GRAFANA_ADMIN_USER=hd-admin
+GRAFANA_ADMIN_PASSWORD=
+GRAFANA_WRITE_USER=hd-writer
+GRAFANA_READ_USER=hd-reader
+VITE_GRAFANA_WRITE_USER=hd-writer
+VITE_GRAFANA_READ_USER=hd-reader
 
 NODE_RED_VERSION=2.2.2-12
 
