--- a/ui/package.json
+++ b/ui/package.json
@@ -22,6 +22,7 @@
     "caniuse-lite": "^1.0.30001367",
     "codemirror": "^6.0.1",
     "gridstack": "^5.1.1",
+    "js-cookie": "^3.0.5",
     "leaflet": "^1.8.0",
     "material-file-icons": "^2.2.0",
     "monaco-editor-vue3": "^0.1.6",
