--- a/ui/package.json
+++ b/ui/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "@intlify/vite-plugin-vue-i18n": "^5.0.0",
     "@types/jquery": "^3.5.14",
+    "@types/js-cookie": "^3.0.6",
     "@types/leaflet": "^1.7.11",
     "@types/node": "^17.0.21",
     "@vitejs/plugin-vue": "^3.2.0",
