feat: add grafana version in dotenv

--- a/.env.example
+++ b/.env.example
@@ -46,6 +46,7 @@ WARP10_MAXLOOP_HARD=1000000
 WARPFLEET_MACROS_TTL=180000
 WARPFLEET_SYNCHRONISER_URL_PREFIX=http://localhost:8082/api/sync
 
+GRAFANA_VERSION=10.2.2
 GRAFANA_ADMIN_USER=hd-admin
 GRAFANA_ADMIN_PASSWORD=
 GRAFANA_WRITE_USER=hd-writer
