fix: grafana connection cookie and display bugs

--- a/.env.example
+++ b/.env.example
@@ -53,6 +53,7 @@ GRAFANA_WRITE_USER=hd-writer
 GRAFANA_READ_USER=hd-reader
 VITE_GRAFANA_WRITE_USER=hd-writer
 VITE_GRAFANA_READ_USER=hd-reader
+VITE_GRAFANA_COOKIE_DOMAIN=hexa-data.fr
 
 NODE_RED_VERSION=2.2.2-12
 
