--- a/.env.example
+++ b/.env.example
@@ -46,6 +46,8 @@ WARP10_MAXLOOP_HARD=1000000
 WARPFLEET_MACROS_TTL=180000
 WARPFLEET_SYNCHRONISER_URL_PREFIX=http://localhost:8082/api/sync
 
+ERLENMEYER_ENDPOINT=localhost:9090
+
 GRAFANA_VERSION=10.2.2
 GRAFANA_ADMIN_USER=hd-admin
 GRAFANA_ADMIN_PASSWORD=
