--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "node ace app:build",
     "dev:adonis": "node ace serve --watch",
     "dev:vite": "vite ./ui",
-    "dev": "node ace app:dev & node ace mqtt:sub & node ace scripts:start",
-    "start": "node server.js & node ace mqtt:sub & node ace scripts:start & node ace scheduler:run",
+    "dev": "node ace app:dev & node ace mqtt:sub & node ace scripts:start & node ./bin/erlenmeyer/run.js",
+    "start": "node server.js & node ace mqtt:sub & node ace scripts:start & node ace scheduler:runt & node ./bin/erlenmeyer/run.js",
     "test": "node -r @adonisjs/assembler/build/register japaFile.ts",
     "db:init": "node ace migration:rollback && node ace migration:run && node ace db:seed",
     "mqtt": "node ace mqtt:sub && node ace mqtt:sub",
@@ -68,6 +68,7 @@
     "archiver": "^5.3.1",
     "axios": "^0.27.2",
     "cryptolens": "^1.0.11",
+    "dotenv-cli": "^7.3.0",
     "luxon": "^3.0.1",
     "mime": "^3.0.0",
     "mime-types": "^2.1.35",
