feat: telegraf metrics v1 draft

--- a/bin/telegraf/config_template.conf
+++ b/bin/telegraf/config_template.conf
@@ -1,26 +1,42 @@
 [agent]
   interval = "10s"
+  # interval = "1s"
   round_interval = true
   metric_batch_size = 1000
   metric_buffer_limit = 10000
   collection_jitter = "0s"
   flush_interval = "10s"
+  # flush_interval = "1s"
   flush_jitter = "0s"
   precision = ""
   debug = false
-  quiet = false
+  quiet = true
   logfile = ""
   hostname = ""
   omit_hostname = false
 
 [[inputs.mqtt_consumer]]
   servers = ["${_MQTT_ENDPOINT_TCP}"]
-  topics = ["/HD/+/metrics"]
-  data_format = "json"
-  client_id  = "${MQTT_SUBSCRIBER_CLIENTID}-telegraf-${PROJECT_UUID}"
+  topics = ["/HD/${PROJECT_UUID}/metrics/v1/#"]
+  client_id  = "${MQTT_SUBSCRIBER_CLIENTID}-telegraf-${PROJECT_UUID}-v1"
   username = "${MQTT_SUBSCRIBER_USERNAME}"
   password = "${MQTT_SBSCRIBER_PASSWORD}"
+  topic_tag = ""
+  data_format = "xpath_json"
+  xpath_allow_empty_selection = false
+  [[inputs.mqtt_consumer.xpath]]
+    timestamp = "/ts"
+    timestamp_format = "unix_ns"
+    field_selection = "/*[not(self::ts) and not(self::tags)]"
+    field_value = "number(.)"
+    tag_selection = "/tags/*"
+  [[inputs.mqtt_consumer.topic_parsing]]
+    topic = "/HD/+/metrics/v1/+"
+    measurement = "/_/_/_/_/measurement"
 
 [[outputs.warp10]]
   warp_url = "${WARP10_ENDPOINT}"
   token = "${PROJECT_TOKEN}"
+
+# [[outputs.file]]
+#   files = ["stdout"]
