--- a/bin/telegraf/config_template.conf
+++ b/bin/telegraf/config_template.conf
@@ -1,12 +1,12 @@
 [agent]
-  interval = "10s"
-  # interval = "1s"
+  # interval = "10s"
+  interval = "1s"
   round_interval = true
   metric_batch_size = 1000
   metric_buffer_limit = 10000
   collection_jitter = "0s"
-  flush_interval = "10s"
-  # flush_interval = "1s"
+  # flush_interval = "10s"
+  flush_interval = "1s"
   flush_jitter = "0s"
   precision = ""
   debug = false
@@ -22,14 +22,13 @@
   username = "${MQTT_SUBSCRIBER_USERNAME}"
   password = "${MQTT_SBSCRIBER_PASSWORD}"
   topic_tag = ""
-  data_format = "xpath_json"
-  xpath_allow_empty_selection = false
-  [[inputs.mqtt_consumer.xpath]]
-    timestamp = "/ts"
-    timestamp_format = "unix_ns"
-    field_selection = "/*[not(self::ts) and not(self::tags)]"
-    field_value = "number(.)"
-    tag_selection = "/tags/*"
+  data_format = "json"
+  json_name_key = "name"
+  json_time_key = "ts"
+  json_time_format = "unix_ns"
+  tag_keys = [
+    "tag*"
+  ]
   [[inputs.mqtt_consumer.topic_parsing]]
     topic = "/HD/+/metrics/v1/+"
     measurement = "/_/_/_/_/measurement"
