feat: add new telegraf version

--- a/bin/telegraf/config_template.conf
+++ b/bin/telegraf/config_template.conf
@@ -23,9 +23,8 @@
   password = "${MQTT_SBSCRIBER_PASSWORD}"
   topic_tag = ""
   data_format = "json"
-  json_name_key = "name"
   json_time_key = "ts"
-  json_time_format = "unix_ns"
+  json_time_format = "unix_ms"
   tag_keys = [
     "tag*"
   ]
