--- a/ui/package.json
+++ b/ui/package.json
@@ -20,7 +20,10 @@
     "@vuepic/vue-datepicker": "^3.3.1",
     "axios": "^0.24.0",
     "caniuse-lite": "^1.0.30001367",
+    "chart.js": "^4.4.1",
+    "chartjs-adapter-dayjs-4": "^1.0.4",
     "codemirror": "^6.0.1",
+    "dayjs": "^1.11.10",
     "gridstack": "^5.1.1",
     "js-cookie": "^3.0.5",
     "leaflet": "^1.8.0",
@@ -30,6 +33,7 @@
     "socket.io-client": "^4.7.1",
     "vite-plugin-plain-text": "^1.2.1",
     "vue": "^3.2.31",
+    "vue-chartjs": "^5.3.0",
     "vue-codemirror": "^6.1.1",
     "vue-color-kit": "^1.0.5",
     "vue-i18n": "^9.1.10",
