feat: add telegraf log and restart if shutdown

--- a/bin/telegraf/config_template.conf
+++ b/bin/telegraf/config_template.conf
@@ -11,9 +11,13 @@
   precision = ""
   debug = false
   quiet = true
-  logfile = ""
+  logtarget = "file"
+  logfile = "${PROJECT_LOG_FILE}"
+  logfile_rotation_interval = "24h"
+  logfile_rotation_max_size = "10MB"
+  logfile_rotation_max_archives = 5
+  omit_hostname = true
   hostname = ""
-  omit_hostname = false
 
 [[inputs.mqtt_consumer]]
   servers = ["${_MQTT_ENDPOINT_TCP}"]
