feat: add /now mqtt topic without ts

--- a/bin/telegraf/config_template.conf
+++ b/bin/telegraf/config_template.conf
@@ -21,7 +21,7 @@
 
 [[inputs.mqtt_consumer]]
   servers = ["${_MQTT_ENDPOINT_TCP}"]
-  topics = ["/HD/${PROJECT_UUID}/metrics/v1/#"]
+  topics = ["/HD/${PROJECT_UUID}/metrics/v1/+"]
   client_id  = "${MQTT_SUBSCRIBER_CLIENTID}-telegraf-${PROJECT_UUID}-v1"
   username = "${MQTT_SUBSCRIBER_USERNAME}"
   password = "${MQTT_SBSCRIBER_PASSWORD}"
@@ -35,6 +35,21 @@
   [[inputs.mqtt_consumer.topic_parsing]]
     topic = "/HD/+/metrics/v1/+"
     measurement = "/_/_/_/_/measurement"
+
+[[inputs.mqtt_consumer]]
+  servers = ["${_MQTT_ENDPOINT_TCP}"]
+  topics = ["/HD/${PROJECT_UUID}/metrics/v1/+/now"]
+  client_id  = "${MQTT_SUBSCRIBER_CLIENTID}-telegraf-${PROJECT_UUID}-v1-now"
+  username = "${MQTT_SUBSCRIBER_USERNAME}"
+  password = "${MQTT_SBSCRIBER_PASSWORD}"
+  topic_tag = ""
+  data_format = "json"
+  tag_keys = [
+    "tag*"
+  ]
+  [[inputs.mqtt_consumer.topic_parsing]]
+    topic = "/HD/+/metrics/v1/+/now"
+    measurement = "/_/_/_/_/measurement/_"
 
 [[outputs.warp10]]
   warp_url = "${WARP10_ENDPOINT}"
