feat: telegraf no log rotate and string values

--- a/bin/telegraf/config_template.conf
+++ b/bin/telegraf/config_template.conf
@@ -15,7 +15,7 @@
   logfile = "${PROJECT_LOG_FILE}"
   logfile_rotation_interval = "24h"
   logfile_rotation_max_size = "10MB"
-  logfile_rotation_max_archives = 5
+  logfile_rotation_max_archives = 0
   omit_hostname = true
   hostname = ""
 
@@ -44,6 +44,9 @@
   password = "${MQTT_SBSCRIBER_PASSWORD}"
   topic_tag = ""
   data_format = "json"
+  json_string_fields = [
+    "_*"
+  ]
   tag_keys = [
     "tag*"
   ]
