fix: telegraf not parsing correctly messages

--- a/bin/telegraf/config_template.conf
+++ b/bin/telegraf/config_template.conf
@@ -34,7 +34,7 @@
   ]
   [[inputs.mqtt_consumer.topic_parsing]]
     topic = "HD/+/metrics/v1/+"
-    measurement = "/_/_/_/_/measurement"
+    measurement = "_/_/_/_/measurement"
 
 [[inputs.mqtt_consumer]]
   servers = ["${_MQTT_ENDPOINT_TCP}"]
@@ -52,7 +52,7 @@
   ]
   [[inputs.mqtt_consumer.topic_parsing]]
     topic = "HD/+/metrics/v1/+/now"
-    measurement = "/_/_/_/_/measurement/_"
+    measurement = "_/_/_/_/measurement/_"
 
 [[outputs.warp10]]
   warp_url = "${WARP10_ENDPOINT}"
