--- a/bin/telegraf/config_template.conf
+++ b/bin/telegraf/config_template.conf
@@ -29,8 +29,11 @@
   data_format = "json"
   json_time_key = "ts"
   json_time_format = "unix_ms"
+  json_string_fields = [
+    "@*"
+  ]
   tag_keys = [
-    "tag*"
+    "#*"
   ]
   [[inputs.mqtt_consumer.topic_parsing]]
     topic = "HD/+/metrics/v1/+"
@@ -45,10 +48,10 @@
   topic_tag = ""
   data_format = "json"
   json_string_fields = [
-    "_*"
+    "@*"
   ]
   tag_keys = [
-    "tag*"
+    "#*"
   ]
   [[inputs.mqtt_consumer.topic_parsing]]
     topic = "HD/+/metrics/v1/+/now"
