--- a/ui/package.json
+++ b/ui/package.json
@@ -30,6 +30,7 @@
     "material-file-icons": "^2.2.0",
     "monaco-editor-vue3": "^0.1.6",
     "path": "^0.12.7",
+    "primevue": "^3.46.0",
     "socket.io-client": "^4.7.1",
     "vite-plugin-plain-text": "^1.2.1",
     "vue": "^3.2.31",
