feat: primevue, variable polish and more

--- a/bin/telegraf/config_template.conf
+++ b/bin/telegraf/config_template.conf
@@ -25,7 +25,7 @@
   client_id  = "${MQTT_SUBSCRIBER_CLIENTID}-telegraf-${PROJECT_UUID}-v1"
   username = "${MQTT_SUBSCRIBER_USERNAME}"
   password = "${MQTT_SBSCRIBER_PASSWORD}"
-  topic_tag = ""
+  topic_tag = "topic"
   data_format = "json"
   json_time_key = "ts"
   json_time_format = "unix_ms"
@@ -45,7 +45,7 @@
   client_id  = "${MQTT_SUBSCRIBER_CLIENTID}-telegraf-${PROJECT_UUID}-v1-now"
   username = "${MQTT_SUBSCRIBER_USERNAME}"
   password = "${MQTT_SBSCRIBER_PASSWORD}"
-  topic_tag = ""
+  topic_tag = "topic"
   data_format = "json"
   json_string_fields = [
     "@*"
