feat: enable telegraf logs

--- a/bin/telegraf/config_template.conf
+++ b/bin/telegraf/config_template.conf
@@ -9,8 +9,7 @@
   flush_interval = "1s"
   flush_jitter = "0s"
   precision = ""
-  debug = false
-  quiet = true
+  # debug = true
   logtarget = "file"
   logfile = "${PROJECT_LOG_FILE}"
   logfile_rotation_interval = "24h"
@@ -61,5 +60,5 @@
   warp_url = "${WARP10_ENDPOINT}"
   token = "${PROJECT_TOKEN}"
 
-# [[outputs.file]]
-#   files = ["stdout"]
+[[outputs.file]]
+  files = ["stdout"]
