wip: remove telegraf and add internal ingress

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "node ace app:build",
     "dev:adonis": "node ace serve --watch",
     "dev:vite": "vite ./ui",
-    "dev": "node ace app:dev & node ace background & node ./bin/erlenmeyer/run.js & node ./bin/telegraf/run.js",
-    "start": "node server.js & node ace background & node ace scheduler:runt & node ./bin/erlenmeyer/run.js & node ./bin/telegraf/run.js",
+    "dev": "node ace app:dev & node ace background & node ./bin/erlenmeyer/run.js",
+    "start": "node server.js & node ace background & node ace scheduler:runt & node ./bin/erlenmeyer/run.js",
     "test": "node -r @adonisjs/assembler/build/register japaFile.ts",
     "db:init": "node ace migration:rollback && node ace migration:run && node ace db:seed",
     "mqtt": "node ace mqtt:sub && node ace mqtt:sub",
