feat: Warp10 3.X.X integration

--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ MQTT_SUBSCRIBER_CLIENTID=hexa-data
 MQTT_SUBSCRIBER_USERNAME=user
 MQTT_SBSCRIBER_PASSWORD=12345678
 
-WARP10_VERSION=2.9.0
+WARP10_VERSION=3.2.0-alpine
 WARP10_HEAP=4g
 WARP10_SECRET=12345678
 WARP10_ENDPOINT=http://localhost:8080
@@ -33,7 +33,8 @@ WARP10_APP_NAME=hexa-data
 WARP10_TEMPLATES_PATH=./app/Services/Warp10Templates/
 WARP10_TOKEN_DURATION=86400
 WARP10_WARPSCRIPT_EXTENSION_TOKEN=io.warp10.script.ext.token.TokenWarpScriptExtension
-WARP10_SECRET=12345678
+WARP10_MASTER_READ_TOKEN=Ub0lfIfCsQy.pyzVqcJhxJncq9ru5XvCSHfj7rFYAwrvOI5GvrS8DM1cHUKmIfYgJCge6.MjwiZ9MXNXa8p55ZIAH7I_RgJj_U05XAW_BwiqSlEbusc0dQPFVKfQLWZ.zKbE6Vo36UWGRO0rEBvGzh60qHFokGw3HHyDrYY1icYS7h2clt3_9F
+WARP10_MASTER_WRITE_TOKEN=kJ2u1g3DVz2bZZ_hx.19tpIXCFl31vZPEWskD6rPtjSRfUbJbPtPSljjyovVWges5O4x_XLlzil.GsKbsaXscUAnKC_1LJV7o7g38YZBc.H7ztFu6xzQqV
 WARP10_WARPSCRIPT_MAXOPS=2000000
 WARP10_WARPSCRIPT_MAXOPS_HARD=10000000000
 WARP10_WARPFLEET_MACROS_REPOS=https://warpfleet.senx.io/macros, http://hd-service:3333/api/v1/macros, https://raw.githubusercontent.com/Hexa-ai/hd-warpscript-macros/main/
