--- a/.env.dev
+++ b/.env.dev
@@ -25,7 +25,7 @@ MQTT_SUBSCRIBER_CLIENTID=hexa-data
 MQTT_SUBSCRIBER_USERNAME=user
 MQTT_SBSCRIBER_PASSWORD=12345678
 
-WARP10_VERSION=2.9.0
+WARP10_VERSION=3.2.0-alpine
 WARP10_HEAP=4g
 WARP10_SECRET=12345678
 WARP10_ENDPOINT=http://localhost:8080
