--- a/.env.example
+++ b/.env.example
@@ -90,3 +90,20 @@ REDIS_PORT=6379
 REDIS_PASSWORD=
 
 APP_DOMAIN=https://domain.com
+
+VITE_DOCKER_HOST_IP=
+VITE_DOCKER_HOST_PORT=
+
+VITE_DOCKER_GRAFANA_DOMAIN=grafana.hexa-data.fr
+DOCKER_GRAFANA_ADMIN_USER=hd-admin
+DOCKER_GRAFANA_ADMIN_PASSWORD=
+VITE_DOCKER_GRAFANA_VERSION=10.2.2
+VITE_DOCKER_GRAFANA_WRITE_USER=hd-writer
+VITE_DOCKER_GRAFANA_READ_USER=hd-reader
+
+VITE_DOCKER_NODERED_DOMAIN=nodered.hexa-data.fr
+DOCKER_NODERED_ADMIN_USER=hd-admin
+DOCKER_NODERED_ADMIN_PASSWORD=
+VITE_DOCKER_NODERED_VERSION=3.1
+VITE_DOCKER_NODERED_COOKIE_DOMAIN=hexa-data.fr
+VITE_DOCKER_NODERED_WRITE_USER=hd-writer
