--- a/.env.testing
+++ b/.env.testing
@@ -20,7 +20,8 @@ MQTT_SBSCRIBER_PASSWORD=12345678
 
 WARP10_VERSION=3.2.0-alpine
 WARP10_HEAP=4g
-WARP10_SECRET=12345678
+WARP10_MASTER_READ_TOKEN=Ub0lfIfCsQy.pyzVqcJhxJncq9ru5XvCSHfj7rFYAwrvOI5GvrS8DM1cHUKmIfYgJCge6.MjwiZ9MXNXa8p55ZIAH7I_RgJj_U05XAW_BwiqSlEbusc0dQPFVKfQLWZ.zKbE6Vo36UWGRO0rEBvGzh60qHFokGw3HHyDrYY1icYS7h2clt3_9F
+WARP10_MASTER_WRITE_TOKEN=kJ2u1g3DVz2bZZ_hx.19tpIXCFl31vZPEWskD6rPtjSRfUbJbPtPSljjyovVWges5O4x_XLlzil.GsKbsaXscUAnKC_1LJV7o7g38YZBc.H7ztFu6xzQqV
 WARP10_ENDPOINT=http://localhost:8080
 WARP10_APP_NAME=hexa-data
 WARP10_TEMPLATES_PATH=./app/Services/Warp10Templates/
