--- a/.env.example
+++ b/.env.example
@@ -92,8 +92,8 @@ REDIS_PASSWORD=
 
 APP_DOMAIN=https://domain.com
 
-VITE_DOCKER_HOST_IP=
-VITE_DOCKER_HOST_PORT=
+VITE_DOCKER_HOST_IP=192.168.1.16
+VITE_DOCKER_HOST_PORT=2375
 
 VITE_DOCKER_GRAFANA_DOMAIN=grafana.hexa-data.fr
 DOCKER_GRAFANA_ADMIN_USER=hd-admin
