feat: build grafana into directory

--- a/resources/project_services/config/grafana.ini
+++ b/resources/project_services/config/grafana.ini
@@ -1,3 +1,9 @@
 # Grafana configuration file
-# This file is empty by default, and is used to override the default settings from the original file
+# This file is minimal by default, and is used to override the default settings from the original file
 # Please see http://docs.grafana.org/installation/configuration/ for possible configuration options
+
+[server]
+root_url = %(protocol)s://%(domain)s:${ROOT_PATH}
+
+[security]
+allow_embedding = true
